--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class='container'>
       <%= render 'shared/navbar' %>
       <%= render partial: 'shared/flash_messages', flash: flash %>
       <%= yield %>
