--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -17,9 +17,8 @@
   .well
     #messages
       - @messages.each do |message|
-        .panel.panel-default
+        .panel.panel-default id=(dom_id(message))
           .panel-body
-            .pull-left
-              = message.content
-            .pull-right.text-muted.small
-              = "#{message.user.full_name} #{time_ago_in_words(message.created_at)} ago"
+            = render message
+
+
