--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -1,6 +1,10 @@
 .col-md-3
   h2 Friends
 
+  ul.list-group
+    - @friends.each do |friend|
+      li.list-group-item = friend
+
 .col-md-9
   h2 Messages
 
