--- a/app/views/messages/_form.html.slim
+++ b/app/views/messages/_form.html.slim
@@ -1,5 +1,5 @@
 .well
-  = form_for @message, remote: true do |f|
+  = form_for message, remote: true do |f|
     p
       = f.text_field :content, class: 'form-control',
         placeholder: 'Enter your message', required: true
