--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -10,11 +10,11 @@ nav.navbar.navbar-default role='navigation'
   #navbar-collapse.collapse.navbar-collapse
     ul.nav.navbar-nav
     ul.nav.navbar-nav.navbar-right
-      li
-        a#service_updates
-          i.glyphicon.glyphicon-bell
       - if signed_in?
         li.dropdown
+          a.dropdown-toggle href='#' data-toggle='dropdown'
+            i.glyphicon.glyphicon-th-large
+            span.caret
           ul.dropdown-menu role='menu'
             li = link_to 'Settings', edit_user_registration_path
             li = link_to 'Logout', destroy_user_session_path, data: { method: :delete }
